# ak

./: .gitignore  CITATION.cff  CMakeLists.txt  CNAME  DEBIAN_PUBLISHING.md  DEBUG_GUIDE.md  EULA.txt  GEMINI.md  HTTP_SERVER.md  LICENSE  Makefile  README.md  WEB_INTERFACE.md  ak  ak-repository-key.gpg  ak.1  ak.cpp  ak.desktop  ak_2.1.0-1_amd64.deb  ak_2.1.0-1_amd64.deb.1  ak_backend_api.py  build-and-upload-ppa.sh  build.ps1  build.sh  class-diagram.md  codemeta.json  commit-repos.sh  developers-apertacodex-public.key  encrypted_message.txt  index.html  install-ak.sh  old.install-ak.sh  ppa-upload.sh  publish-ppa-multi.sh  publish-ppa.sh  release.sh  requirements.txt  serve-web-app.py  setup-apt-accounts.sh  setup-repository.sh  (+9 more)
.github/: FUNDING.yml  SECRETS_SETUP.md  repository.yml
.github/workflows/: brew-auto-update.yml  build-macos-dmg.yml  macos-build-test.yml  releaase.yml  release.yml  update-homebrew-formula.yml
Formula/: ak.rb
ak-apt-repo/: index.html
ak-apt-repo/dists/: index.html  setup-ak-repository.sh
ak-apt-repo/dists/plucky/: InRelease  Release  Release.gpg
ak-apt-repo/dists/plucky/main/binary-amd64/: Packages
ak-apt-repo/dists/stable/: InRelease  Release  Release.gpg
ak-apt-repo/dists/stable/main/binary-amd64/: Packages
ak-apt-repo/pool/: index.html
ak-apt-repo/pool/main/: ak_2.0.0-1_amd64.deb  ak_2.10.0_amd64.deb  ak_2.10.1_amd64.deb  ak_2.10.2_amd64.deb  ak_2.10.3_amd64.deb  ak_2.10.4_amd64.deb  ak_2.10.5_amd64.deb  ak_2.10.6_amd64.deb  ak_2.10.7_amd64.deb  ak_2.11.0_amd64.deb  ak_2.11.1_amd64.deb  ak_2.11.2_amd64.deb  ak_2.11.3_amd64.deb  ak_2.11.5_amd64.deb  ak_2.11.6_amd64.deb  ak_2.11.7_amd64.deb  ak_2.2.0-1_amd64.deb  ak_2.9.0-1_amd64.deb  ak_3.1.0_amd64.deb  ak_3.1.10_amd64.deb  ak_3.1.11_amd64.deb  ak_3.1.2_amd64.deb  ak_3.1.4_amd64.deb  ak_3.1.5_amd64.deb  ak_3.1.6_amd64.deb  ak_3.1.7_amd64.deb  ak_3.1.8_amd64.deb  ak_3.1.9_amd64.deb  ak_3.2.0_amd64.deb  ak_3.3.0_amd64.deb  ak_4.0.1_amd64.deb  ak_4.0.2_amd64.deb  ak_4.0.3_amd64.deb  ak_4.0.4_amd64.deb  ak_4.0.5_amd64.deb  ak_4.1.0_amd64.deb  ak_4.1.10_amd64.deb  ak_4.1.11_amd64.deb  ak_4.1.12_amd64.deb  ak_4.1.13_amd64.deb  (+41 more)
ak-macos-repo/: index.html
cmake/: apt_publish.cmake  git_publish.cmake  version_bump.cmake
debian/: changelog  control  copyright  files  install  postinst  rules
debian/source/: exclude  options
docs/: MANUAL.md  README.md  ak.1  apt-repo-troubleshooting.md
include/cli/: cli.hpp
include/commands/: commands.hpp
include/core/: config.hpp
include/crypto/: crypto.hpp
include/gui/: gui.hpp  mainwindow.hpp
include/gui/widgets/: keymanager.hpp  profilemanager.hpp  servicehelpers.hpp  servicemanager.hpp  servicetester.hpp
include/gui/widgets/common/: dialogs.hpp  secureinput.hpp
include/http/: server.hpp
include/services/: services.hpp
include/storage/: vault.hpp
include/system/: system.hpp
include/ui/: ui.hpp
macos/: README.md
macos/app-bundle/: Info.plist  README.md  launcher.sh
macos/dmg/: README.md  README.txt  dmg-layout.json  dmg-setup.applescript
macos/homebrew/: README.md
macos/homebrew/completions/: _ak  ak.bash  ak.fish
macos/homebrew/formula/: ak.rb
macos/homebrew/scripts/: generate-formula.sh  homebrew-integration.sh  publish-to-tap.sh  validate-formula.sh
macos/installer/: Distribution.xml  README.md
macos/installer/resources/: LICENSE.txt  Welcome.html
macos/installer/scripts/: postinstall  preinstall
macos/scripts/: README.md  create-app-bundle.sh  create-dmg-linux.sh  create-dmg.sh  create-pkg.sh  package-all.sh  validate-packages.sh
obj-x86_64-linux-gnu/: bash_completion.tmp  fish_completion.tmp  install_manifest.txt  zsh_completion.tmp
pkg/deb/ak_2.10.1_amd64/DEBIAN/: control
resources/: icons.qrc
scripts/: fix-ak-apt-repo.sh  regenerate-apt-dist.sh
src/: main.cpp
src/cli/: cli.cpp
src/commands/: commands.cpp
src/core/: config.cpp
src/crypto/: crypto.cpp
src/gui/: gui.cpp  mainwindow.cpp
src/gui/widgets/: keymanager.cpp  profilemanager.cpp  servicehelpers.cpp  servicemanager.cpp  servicetester.cpp
src/gui/widgets/common/: dialogs.cpp  secureinput.cpp
src/http/: server.cpp
src/services/: services.cpp
src/storage/: vault.cpp
src/system/: system.cpp
src/ui/: ui.cpp
tests/cli/: test_cli.cpp
tests/core/: test_config.cpp
tests/crypto/: test_crypto.cpp
tests/services/: test_services.cpp
